--- a/style.css
+++ b/style.css
@@ -5,9 +5,12 @@
 
 .flex {display: flex;}
 .flex-block {display: inline-block;}
+.flex-column {flex-direction: column;}
 
 .justify-center {justify-content: center;}
 .justify-between {justify-content: space-between;}
+.text-center {text-align: center;}
+
 
 .align-center {align-items: center;}
 
@@ -64,6 +67,7 @@ header span {
 main {
     background-image:url(https://64.media.tumblr.com/276ac633d947ba5c8bbebaa0bb6d4574/tumblr_n1xcz4UPBU1rrftcdo1_640.gifv);
     height: calc(100vh - var(--header-height));
+    width: 100vw;
 }
 
 .start-text { 
@@ -83,8 +87,34 @@ main {
     font-size: 1.5rem;
     font-family: BunnyFunny;
     text-align: center;
+    margin-bottom: 2rem;
 }
 
+label {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1.2rem;
+    color: #55141a;
+}
+
+#myText {
+    background-color: #ffd333a2;
+    border-radius: 0.5rem;
+    border: 1px solid #55141a;
+    height: 2rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1rem;
+    padding: .5rem;
+}
+
+#myButton {
+    background-color: #ffd233;
+    border-radius: 0.5rem;
+    border: 1px solid #55141a;
+    height: 2rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+}
 
 .button-choice {
     background-color: #ffd233;
@@ -96,13 +126,27 @@ main {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
     font-size: 1rem;
     margin: 0.5rem;
+    cursor: pointer;
 
 }
 
-.inventory {
-    width: 50rem;
-    background-color: chartreuse;
+.inventory-container {
+    background-color: beige;
+    color: #e62820;
+    font-size: 1.5rem;
+    font-family: BunnyFunny;
+    border-radius: 1rem;
+    padding: 2rem;
+    bottom: calc(100vh - var());
+    right: 0;
+
 }
+
+.inventory-container > img {
+    height: 4rem;
+}
+
+
 
 /* Animations */
 
