--- a/test.css
+++ b/test.css
@@ -100,11 +100,10 @@ main {
     font-size: 1.5rem;
     font-family: BunnyFunny;
     text-align: center;
-    margin-bottom: 2rem;
 }
 
-#storyBox {display: none;}
-#inputBox {display: none;}
+#storyBox {display: none; margin-bottom: 20rem;}
+#inputBox {display: none; animation: fadeIn 1s ease-in-out;}
 #choicesBox {display: none;}
 #inventory {display: none;}
 #location {display: none;}
@@ -182,5 +181,15 @@ label {
     100% {
         color: #46ad37;
     }
+}
+
+@keyframes fadeIn {
+    0% {
+        bottom: -10rem;
+    }
+    100%{
+        bottom: 14rem;
+    }
+    
 }
 
