--- a/test-igen.css
+++ b/test-igen.css
@@ -108,6 +108,11 @@ main {
     border-radius: 1rem;
     padding: 1rem;
 }
+#songContainer {
+    display: none;
+    bottom: 18rem; 
+    margin-top: 1rem;
+}
 
 label {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -135,6 +140,25 @@ label {
     cursor: pointer;
 }
 
+#songInput {
+    background-color: #ffd333a2;
+    border-radius: 0.5rem;
+    border: 1px solid #55141a;
+    height: 2rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1rem;
+    padding: .5rem;
+}
+
+#songButton {
+    background-color: #ffd233;
+    border-radius: 0.5rem;
+    border: 1px solid #55141a;
+    height: 2rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+}
 
 .button-choice {
     background-color: #ffd233;
